tests/baselines/reference/importOnAliasedIdentifiers.errors.txt
importOnAliasedIdentifiers.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importOnAliasedIdentifiers.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== importOnAliasedIdentifiers.ts (2 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface X { s: string }
        export var X: X;
    }
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface A { n: number }
        import Y = A; // Alias only for module A
        import Z = A.X; // Alias for both type and member A.X
        var v: Z = Z;
    }